# python_example_wsgi

./: requirements.txt  setup.cfg
openstack/: api-paste.ini  client.py  log_filter.py  router.py  service.py  test_app.py  test_mapper.py  urlmap.py  wsgi.py
