[metadata]
name = python_example_wsgi
version = 2016.11.1
summary = python example wsgi
author = lyqgenius
author-email = lyqgenius@vip.qq.com
home-page = https://github.com/lyqgenius/python_example_wsgi
classifier =
    Environment :: python_example_wsgi
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = openstack

[entry_points]
console_scripts =
    wsgi-client = openstack.client:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 0
warnerrors = true
